2007-06-11  Miloslav Trmač  <mitr@redhat.com>

	* userhelper.c (wrap, main): Use the locale's charset.
	(converse_console): Don't re-set the charset to the locale's charset,
	it is now the default.
	* userhelper-wrap.c (write_childin_string): New function.
	(userhelper_write_childin): Convert written data to the locale's
	charset if possible.  Simplify and reformat.
	(userhelper_runv): Convert data read from the child from the locale's
	charset to UTF-8.

	* userhelper-wrap.c: Remove unnecessary #includes.

	* userinfo.c: Remove unnecessary #includes.

	* userhelper-wrap.c (userhelper_parse_childout): Modify to handle only
	one line.  Exit if the commmand code is invalid.
	(userhelper_read_childout): Always read a complete line, not what
	partial line happens to be read.  Repeat while there are lines left.
	(userhelper_runv): Don't assume the communication is in UTF-8.  Set the
	only expected line terminator.  Don't make the channel non-blocking to
	make sure a partial line is always read until it is finished.

	* userhelper-wrap.c (struct message): Remove typedef.

2007-06-09  Miloslav Trmač  <mitr@redhat.com>

	* configure.in: Release 1.91.2.
	* NEWS: Update.

2007-06-09  Miloslav Trmac  <mitr@redhat.com>

	* userhelper.c (converse_console, converse_pipe): Don't replace
	/.*password.*/i by "Password for %s".
	(converse_console): Tell the user what user he should authenticate as.
	* userhelper-wrap.c (userhelper_parse_childout): Don't initialize
	resp->user from guessed data, always keep the UH_USER value.  Tell the
	user what user he should authenticate as.

2007-04-19  Miloslav Trmac  <mitr@redhat.com>

	* configure.in: Release 1.91.1.
	* NEWS: Update.

	* po/LINGUAS: Note that empty translations are removed.

2007-03-26  Miloslav Trmac  <mitr@redhat.com>

	* consolehelper.c: Allow building consolehelper-nox.c without GTK+
	headers.  Patch by Robert Scheck <redhat-bugzilla@linuxnetz.de>.

2007-03-19  Miloslav Trmac  <mitr@redhat.com>
